--- a/nessgroceryapp/src/app/contact/contact.component.css
+++ b/nessgroceryapp/src/app/contact/contact.component.css
@@ -64,3 +64,15 @@ i {
     font-size: 40px;
     margin-top: 20px;
 }
+
+/* profile page css */
+p {
+    font-family: Lato;
+  }
+  
+  img {
+    height: 200px;
+    width: 200px;
+    border: 5px solid #000;
+    border-radius: 50%;
+  }
