--- a/nessgroceryapp/src/app/contact/contact.component.html
+++ b/nessgroceryapp/src/app/contact/contact.component.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <section>
+    <div>
+        <img [src]="url ? url : 'https://www.w3schools.com/howto/img_avatar.png'"> <br/>
+        <input type='file' (change)="onSelectFile($event)">
+    </div>
+
     <h1>Contact </h1>
  <div id="Contactdivtop">
 
