--- a/nessgroceryapp/src/app/index/index.component.html
+++ b/nessgroceryapp/src/app/index/index.component.html
@@ -1,294 +1,15 @@
 
-  
 <div class="banner">
   <div class="container">
     <h3>Ness Grocery Mart, <span>Special Offers</span></h3>
   </div>
 </div>
-<!-- //banner --> 
-<!-- banner-bottom -->
-<div class="banner-bottom">
-  <div class="container">
-    <div class="col-md-5 wthree_banner_bottom_left">
-      <div class="video-img">
-        <a class="play-icon popup-with-zoom-anim" href="#small-dialog">
-          <span class="glyphicon glyphicon-expand" aria-hidden="true"></span>
-        </a>
-      </div> 
-        <!-- pop-up-box -->     
-        <script src="assets/js/jquery.magnific-popup.js" type="text/javascript"></script>
-        <!--//pop-up-box -->
-        <div id="small-dialog" class="mfp-hide">
-          <iframe src="https://www.youtube.com/embed/ZQa6GUVnbNM"></iframe>
-        </div>
-        <script>
-          $(document).ready(function() {
-          $('.popup-with-zoom-anim').magnificPopup({
-            type: 'inline',
-            fixedContentPos: false,
-            fixedBgPos: true,
-            overflowY: 'auto',
-            closeBtnInside: true,
-            preloader: false,
-            midClick: true,
-            removalDelay: 300,
-            mainClass: 'my-mfp-zoom-in'
-          });
-                                          
-          });
-        </script>
-    </div>
 
-
-    <div class="col-md-7 wthree_banner_bottom_right">
-      <div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
-        <ul id="myTab" class="nav nav-tabs" role="tablist">
-          <li *ngFor="let category of categoryList" role="presentation" >
-            <a (click)="getProductsByCateogy(category)" href="javascript:void(0)" id="home-tab" role="tab" data-toggle="tab" aria-controls="home">{{category.name}}</a>
-          </li>
-        </ul>
-
-        <div id="myTabContent" class="tab-content">
-          <div role="tabpanel" class="tab-pane fade active in" id="home" aria-labelledby="home-tab">
-            <div   class="agile_ecommerce_tabs">
-              <div  *ngFor="let data of productsList" class="col-md-4 agile_ecommerce_tab_left">
-                <div class="hs-wrapper">
-                  <img  src="assets/images/3.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/4.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/5.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/6.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/7.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/3.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/4.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/5.jpg" alt=" " class="img-responsive" />
-                  <div class="w3_hs_bottom">
-                    <ul>
-                      <li>
-                        <a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div> 
-                <h5><a href="single.html">{{data.name}}</a></h5>
-                <div class="simpleCart_shelfItem">
-                  <p>
-                    <span>{{data.price}}</span> <i class="item_price">{{data.price}}</i>
-                  </p>
-                    <button (click)="addCart(data)" type="submit" class="w3ls-cart">Add to cart</button>
-                </div>
-              </div>
-              <div class="clearfix"> </div>
-            </div>            
-          </div>
-  
-          
-             
-                <!-- <h5><a href="single.html">Notebook</a></h5>
-                <div class="simpleCart_shelfItem">
-                  <p><span>$290</span> <i class="item_price">$280</i></p>
-                  <form action="#" method="post">
-                    <input type="hidden" name="cmd" value="_cart" />
-                    <input type="hidden" name="add" value="1" /> 
-                    <input type="hidden" name="w3ls_item" value="Notebook" /> 
-                    <input type="hidden" name="amount" value="280.00" />   
-                    <button type="submit" class="w3ls-cart">Add to cart</button>
-                  </form>
-                </div> -->
-              </div>
-              <!-- <div class="col-md-4 agile_ecommerce_tab_left">
-                <div class="hs-wrapper">
-                  <img  src="assets/images/13.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/11.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/12.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/11.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/12.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/13.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/11.jpg" alt=" " class="img-responsive" />
-                  <img  src="assets/images/12.jpg" alt=" " class="img-responsive" />
-                  <div class="w3_hs_bottom">
-                    <ul>
-                      <li>
-                        <a href="#" data-toggle="modal" data-target="#myModal2"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <h5><a href="single.html">Kid's Toy</a></h5>
-                <div class="simpleCart_shelfItem">
-                  <p><span>$120</span> <i class="item_price">$80</i></p>
-                  <form action="#" method="post">
-                    <input type="hidden" name="cmd" value="_cart" />
-                    <input type="hidden" name="add" value="1" /> 
-                    <input type="hidden" name="w3ls_item" value="Kid's Toy" /> 
-                    <input type="hidden" name="amount" value="80.00" />   
-                    <button type="submit" class="w3ls-cart">Add to cart</button>
-                  </form>
-                </div>
-              </div> -->
-              <div class="clearfix"> </div>
-            </div>
-          </div>
-         
-        </div>
-      <!-- </div> 
-    </div>
-    <div class="clearfix"> </div> -->
-</div>
-<!-- //banner-bottom --> 
-<!-- modal-video -->
-<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
-      </div>
-      <section>
-        <div class="modal-body">
-          <div class="col-md-5 modal_body_left">
-            <img  src="assets/images/3.jpg" alt=" " class="img-responsive" />
-          </div>
-          <div class="col-md-7 modal_body_right">
-            <h4>The Best Mobile Phone 3GB</h4>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
-              commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-            <div class="rating">
-              <div class="rating-left">
-                <img  src="assets/images/star-.png" alt=" " class="img-responsive" />
-              </div>
-              <div class="rating-left">
-                <img  src="assets/images/star-.png" alt=" " class="img-responsive" />
-              </div>
-              <div class="rating-left">
-                <img  src="assets/images/star-.png" alt=" " class="img-responsive" />
-              </div>
-              <div class="rating-left">
-                <img  src="assets/images/star.png" alt=" " class="img-responsive" />
-              </div>
-              <div class="rating-left">
-                <img  src="assets/images/star.png" alt=" " class="img-responsive" />
-              </div>
-              <div class="clearfix"> </div>
-            </div>
-            <div class="modal_body_right_cart simpleCart_shelfItem">
-              <p><span>$380</span> <i class="item_price">$350</i></p>
-              <form action="#" method="post">
-                <input type="hidden" name="cmd" value="_cart">
-                <input type="hidden" name="add" value="1"> 
-                <input type="hidden" name="w3ls_item" value="Mobile Phone1"> 
-                <input type="hidden" name="amount" value="350.00">   
-                <button type="submit" class="w3ls-cart">Add to cart</button>
-              </form>
-            </div>
-            <h5>Color</h5>
-            <div class="color-quality">
-              <ul>
-                <li><a href="#"><span></span></a></li>
-                <li><a href="#" class="brown"><span></span></a></li>
-                <li><a href="#" class="purple"><span></span></a></li>
-                <li><a href="#" class="gray"><span></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="clearfix"> </div>
-        </div>
-      </section>
-    </div>
-  </div>
-</div>
-
-<!-- //modal-video -->
-<!-- banner-bottom1 -->
-<div class="banner-bottom1">
-  <div class="agileinfo_banner_bottom1_grids">
-    <div class="col-md-7 agileinfo_banner_bottom1_grid_left">
-      <h3>Grand Opening Event With flat<span>20% <i>Discount</i></span></h3>
-      <a href="products.html">Shop Now</a>
-    </div>
-    <div class="col-md-5 agileinfo_banner_bottom1_grid_right">
-      <h4>hot deal</h4>
-      <div class="timer_wrap">
-        <div id="counter"> </div>
-      </div>
-      <script src="assets/js/jquery.countdown.js"></script>
-      <script src="assets/js/script.js"></script>
-    </div>
-    <div class="clearfix"> </div>
-  </div>
-</div>
-<!-- //banner-bottom1 --> 
-<!-- special-deals -->
-<div class="special-deals">
-  <div class="container">
-    <h2>Special Deals</h2>
-    <div class="w3agile_special_deals_grids">
-      <div class="col-md-7 w3agile_special_deals_grid_left">
-        <div class="w3agile_special_deals_grid_left_grid">
-          <img  src="assets/images/21.jpg" alt=" " class="img-responsive" />
-          <div class="w3agile_special_deals_grid_left_grid_pos1">
-            <h5>30%<span>Off/-</span></h5>
-          </div>
-          <div class="w3agile_special_deals_grid_left_grid_pos">
-            <h4>We Offer <span>Best Products</span></h4>
-          </div>
-        </div>
-        <div class="wmuSlider example1">
-          <div class="wmuSliderWrapper">
-            <article style="position: absolute; width: 100%; opacity: 0;"> 
-              <div class="banner-wrap">
-                <div class="w3agile_special_deals_grid_left_grid1">
-                  <img  src="assets/images/t1.png" alt=" " class="img-responsive" />
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
-                    eum fugiat quo voluptas nulla pariatur</p>
-                  <h4>Laura</h4>
-                </div>
-              </div>
-            </article>
-            <article style="position: absolute; width: 100%; opacity: 0;"> 
-              <div class="banner-wrap">
-                <div class="w3agile_special_deals_grid_left_grid1">
-                  <img  src="assets/images/t2.png" alt=" " class="img-responsive" />
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
-                    eum fugiat quo voluptas nulla pariatur</p>
-                  <h4>Michael</h4>
-                </div>
-              </div>
-            </article>
-            <article style="position: absolute; width: 100%; opacity: 0;"> 
-              <div class="banner-wrap">
-                <div class="w3agile_special_deals_grid_left_grid1">
-                  <img  src="assets/images/t3.png" alt=" " class="img-responsive" />
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
-                    eum fugiat quo voluptas nulla pariatur</p>
-                  <h4>Rosy</h4>
-                </div>
-              </div>
-            </article>
-          </div>
-        </div>
-          <script src="assets/js/jquery.wmuSlider.js"></script> 
-          <script>
-            $('.example1').wmuSlider();         
-          </script> 
-      </div>
-      <div class="col-md-5 w3agile_special_deals_grid_right">
-        <img  src="assets/images/20.jpg" alt=" " class="img-responsive" />
-        <div class="w3agile_special_deals_grid_right_pos">
-          <h4>Women's <span>Special</span></h4>
-          <h5>save up <span>to</span> 30%</h5>
-        </div>
-      </div>
-      <div class="clearfix"> </div>
-    </div>
-  </div>
-</div>
 
 <!-- //special-deals -->
 <!-- new-products -->
 <div class="new-products">
-  <div class="container">
+  <div class="">
     <h3>New Products</h3>
     <div class="agileinfo_new_products_grids">
       <div class="col-md-3 agileinfo_new_products_grid">
@@ -411,8 +132,33 @@
     </div>
   </div>
 </div>
+
+
+<!-- //modal-video -->
+<!-- banner-bottom1 -->
+<div class="banner-bottom1">
+  <div class="agileinfo_banner_bottom1_grids">
+    <div class="col-md-7 agileinfo_banner_bottom1_grid_left">
+      <h3>Grand Opening Event With flat<span>20% <i>Discount</i></span></h3>
+      <a href="products.html">Shop Now</a>
+    </div>
+    <div class="col-md-5 agileinfo_banner_bottom1_grid_right">
+      <h4>hot deal</h4>
+      <div class="timer_wrap">
+        <div id="counter"> </div>
+      </div>
+      <script src="assets/js/jquery.countdown.js"></script>
+      <script src="assets/js/script.js"></script>
+    </div>
+    <div class="clearfix"> </div>
+  </div>
+</div>
+
+
+
+
 <div class="new-products">
-  <div class="container">
+  <div class="">
     <h3>New Products</h3>
     <div class="agileinfo_new_products_grids">
       <div class="col-md-3 agileinfo_new_products_grid">
@@ -537,6 +283,75 @@
 </div>
 
 
+<!-- //banner-bottom1 --> 
+<!-- special-deals -->
+<div class="special-deals">
+  <div class="container">
+    <h2>Special Deals</h2>
+    <div class="w3agile_special_deals_grids">
+      <div class="col-md-7 w3agile_special_deals_grid_left">
+        <div class="w3agile_special_deals_grid_left_grid">
+          <img  src="assets/images/21.jpg" alt=" " class="img-responsive" />
+          <div class="w3agile_special_deals_grid_left_grid_pos1">
+            <h5>30%<span>Off/-</span></h5>
+          </div>
+          <div class="w3agile_special_deals_grid_left_grid_pos">
+            <h4>We Offer <span>Best Products</span></h4>
+          </div>
+        </div>
+        <div class="wmuSlider example1">
+          <div class="wmuSliderWrapper">
+            <article style="position: absolute; width: 100%; opacity: 0;"> 
+              <div class="banner-wrap">
+                <div class="w3agile_special_deals_grid_left_grid1">
+                  <img  src="assets/images/t1.png" alt=" " class="img-responsive" />
+                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
+                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
+                    eum fugiat quo voluptas nulla pariatur</p>
+                  <h4>Laura</h4>
+                </div>
+              </div>
+            </article>
+            <article style="position: absolute; width: 100%; opacity: 0;"> 
+              <div class="banner-wrap">
+                <div class="w3agile_special_deals_grid_left_grid1">
+                  <img  src="assets/images/t2.png" alt=" " class="img-responsive" />
+                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
+                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
+                    eum fugiat quo voluptas nulla pariatur</p>
+                  <h4>Michael</h4>
+                </div>
+              </div>
+            </article>
+            <article style="position: absolute; width: 100%; opacity: 0;"> 
+              <div class="banner-wrap">
+                <div class="w3agile_special_deals_grid_left_grid1">
+                  <img  src="assets/images/t3.png" alt=" " class="img-responsive" />
+                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
+                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
+                    eum fugiat quo voluptas nulla pariatur</p>
+                  <h4>Rosy</h4>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+          <script src="assets/js/jquery.wmuSlider.js"></script> 
+          <script>
+            $('.example1').wmuSlider();         
+          </script> 
+      </div>
+      <div class="col-md-5 w3agile_special_deals_grid_right">
+        <img  src="assets/images/20.jpg" alt=" " class="img-responsive" />
+        <div class="w3agile_special_deals_grid_right_pos">
+          <h4>Women's <span>Special</span></h4>
+          <h5>save up <span>to</span> 30%</h5>
+        </div>
+      </div>
+      <div class="clearfix"> </div>
+    </div>
+  </div>
+</div>
 
 
 <!-- //new-products -->
