--- a/nessgroceryapp/src/app/checkout/checkout.component.html
+++ b/nessgroceryapp/src/app/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <div class="typo codes icons main-grid-border">
-    <div class="container"> 
+    <div class="container" style="background-color:whitesmoke; font-weight: bold;"> 
         <div>
             <h1>Checkout Cart</h1>
 
