--- a/nessgroceryapp/src/app/index/index.component.html
+++ b/nessgroceryapp/src/app/index/index.component.html
@@ -1,5 +1,5 @@
 
-<div class="banner">
+<div class="banner" (click)="closeDialog()">
   <div class="container">
     <h3>Ness Grocery Mart, <span>Special Offers</span></h3>
   </div>
